tdf#119695 only add word to autocomplete suggestions when the cursor leaves it

so that incomplete words are not added as autocomplete candidates even
if they form a legal word. This is similar to what we do for marking
words is misspelt

Change-Id: Ib6b209b68bbcf51fa24ea5c4d995579acf682e52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118974
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>